Fix : modal z-index

--- a/server/views/css/navbar.css
+++ b/server/views/css/navbar.css
@@ -19,7 +19,7 @@ button {
 #register-modal,
 #login-modal {
     position: fixed;
-    z-index: 1;
+    z-index: 20;
     left: 0;
     top: 0;
     width: 100%;
